fix: Update gitlab-mirror.yml
shallow clone으로 push가 안되는 문제가 발생. depth 조절

--- a/.github/workflows/gitlab-mirror.yml
+++ b/.github/workflows/gitlab-mirror.yml
@@ -13,6 +13,8 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4.2.2
+        with:
+          fetch-depth: 0 # 모든 히스토리를 가져옴
 
       - name: Push to GitLab
         env:
