--- a/.github/workflows/gitlab-mirror.yml
+++ b/.github/workflows/gitlab-mirror.yml
@@ -21,4 +21,4 @@ jobs:
           GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
         run: |
           git remote add gitlab ${{ secrets.GITLAB_URL }}
-          git push --mirror gitlab
+          git push gitlab
