refactor: #2 테이블명 단수형으로 변경
- application.yml 파일에 따옴표 옵션 추가
- User.java 부분 Table name 제거

Closed: #2

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -17,6 +17,7 @@ spring:
     properties:
       hibernate:
         format_sql: true  # Pretty-print SQL in logs
+        auto_quote_keyword: true
   sql:
     init:
       mode: always  # Always run SQL scripts during initialization
