--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -20,3 +20,6 @@ spring:
   sql:
     init:
       mode: always  # Always run SQL scripts during initialization
+
+public-data:
+  go-camping: ${GO_CAMPING_SERVICE_KEY}
