--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -21,6 +21,14 @@ spring:
   sql:
     init:
       mode: always  # Always run SQL scripts during initialization
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${GOOGLE_CLIENT_ID}
+            client-secret: ${GOOGLE_CLIENT_SECRET}
+            scope: profile, email
 
 public-data:
   go-camping: ${GO_CAMPING_SERVICE_KEY}
