feat : #31 - logback 관리

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,3 +5,5 @@ spring:
         registration:
           google:
             redirect-uri: http://localhost:8080/login/oauth2/code/google
+  profiles:
+    active: dev
