--- a/build.gradle
+++ b/build.gradle
@@ -50,6 +50,11 @@ dependencies {
     // OAuth 2.0
     implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
 
+    // JWT
+    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
+    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'
+
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
