--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,3 +5,7 @@ spring:
         registration:
           google:
             redirect-uri: http://localhost:8080/login/oauth2/code/google
+
+jwt:
+  access-expired: 300 # 5분
+  refresh-expired: 7200 # 2시간
