feat: S3Bucket 서비스 적용 환경 구축

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -30,7 +30,7 @@ spring:
             client-secret: ${GOOGLE_CLIENT_SECRET}
             scope: profile, email
   profiles:
-    active: dev #logback-spring springProfile 설정
+    active: dev, s3Bucket #logback-spring springProfile 설정
 
 public-data:
   go-camping: ${GO_CAMPING_SERVICE_KEY}
