--- a/build.gradle
+++ b/build.gradle
@@ -62,7 +62,9 @@ dependencies {
     implementation 'software.amazon.awssdk:sts'
 
     //공간데이터 저장 hibernate-spatial
-    implementation group: 'org.hibernate', name: 'hibernate-spatial', version: '5.1.0.Final'
+    implementation 'org.hibernate:hibernate-core:6.2.6.Final' // 최신 버전
+    implementation 'org.locationtech.jts:jts-core:1.19.0' // 최신 버전 확인
+    implementation 'org.hibernate.orm:hibernate-spatial:6.2.6.Final'
 
     //dev-tools
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
