fix: CampAddr location 필드 엔티티 수정, vividsolutions.jts선언에서 ocationtech.jts선언으로 수정
- CampAddr location Point 타입 필드 선언으로 수정
- org.locationtech.jts.io 형태로 import 문 수정

--- a/build.gradle
+++ b/build.gradle
@@ -63,6 +63,7 @@ dependencies {
 
     //공간데이터 저장 hibernate-spatial
     implementation group: 'org.hibernate', name: 'hibernate-spatial', version: '5.1.0.Final'
+    implementation 'org.locationtech.jts:jts-core:1.20.0'
 
     //dev-tools
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
@@ -73,6 +74,7 @@ dependencies {
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
+
 }
 
 test {
