Fix: #119 create -> update 변경

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,7 +7,7 @@ spring:
   jpa:
     show-sql: true  # SQL 로그 출력
     hibernate:
-      ddl-auto: create  # 개발 중에는 create, 배포 시에는 update 사용
+      ddl-auto: update
     database-platform: org.hibernate.spatial.dialect.mysql.MySQLSpatialDialect  # 공간 데이터 처리 Dialect
     properties:
       hibernate:
