feat: MongoDB 환경 설정
- application.yml 설정
- 필요 데이터 입력

Closes #157

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,4 +1,7 @@
 spring:
+  data:
+    mongodb:
+      uri: mongodb+srv://elicer:${MONGODB_PASSWORD}@campingon.njpfg.mongodb.net/camp?retryWrites=true&w=majority&appName=CampingOn
   datasource:
     url: ${MYSQL_URL}  # MySQL 데이터베이스 URL
     driver-class-name: com.mysql.cj.jdbc.Driver
