--- a/build.gradle
+++ b/build.gradle
@@ -74,6 +74,9 @@ dependencies {
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'com.mysql:mysql-connector-j'
 
+    // MongoDB
+    implementation ('org.springframework.boot:spring-boot-starter-data-mongodb')
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 
