refactor: CampController @Validate를 활용, SearchInfoController page, size Value 활용
- CampController @Validate를 활용한 @Positive, @Max, @Min 설정
- SearchInfoController application.yml에서 설정한 값을 Value로 받아 설정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,3 +41,9 @@ app:
     reservation:
       page: 0
       size: 5
+    camp:
+      page: 0
+      size: 9
+    searchInfo:
+      page: 0
+      size: 12
