Fix: #195 빌드 실패 해결
- 단순 쉘 명령 실행은 uses 대신 ru

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,7 +30,7 @@ jobs:
       run: chmod +x ./gradlew
       
     - name: Build with Gradle
-      uses: ./gradlew build -x test
+      run: ./gradlew build -x test
 
     # 빌드 결과물 업로드
     - name: Upload a Build Artifact
