--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://elicer:${MONGODB_PASSWORD}@campingon.njpfg.mongodb.net/camp?retryWrites=true&w=majority&appName=CampingOn
+      uri: mongodb+srv://${MONGODB_USERNAME}:${MONGODB_PASSWORD}@${MONGODB_URL}/${MONGODB_NAME}?retryWrites=true&w=majority&appName=CampingOn
   datasource:
     url: ${MYSQL_URL}  # MySQL 데이터베이스 URL
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -45,9 +45,3 @@ app:
     reservation:
       page: 0
       size: 5
-    camp:
-      page: 0
-      size: 9
-    searchInfo:
-      page: 0
-      size: 12
