Fix: #195 배포 세팅 변경

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -4,7 +4,10 @@ spring:
       client:
         registration:
           google:
-            redirect-uri: # 배포 서버 url 입력
+            redirect-uri: https://camping-on.site/login/oauth2/code/google
+
+app:
+  front-url: http://localhost:3000
 
 jwt:
   access-expired: 900 # 15분
