Feat: #211 Google Oauth 로그인 수정
- OAuthSuccessHandler 수정: RefreshToken 포맷 변경
- 환경변수 세팅

Closes #211

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -7,7 +7,7 @@ spring:
             redirect-uri: https://camping-on.site/login/oauth2/code/google
 
 app:
-  front-url: http://localhost:3000
+  front-url: https://camping-on.site
 
 jwt:
   access-expired: 900 # 15분
