--- a/build.gradle
+++ b/build.gradle
@@ -75,7 +75,9 @@ dependencies {
     runtimeOnly 'com.mysql:mysql-connector-j'
 
     // MongoDB
-    implementation ('org.springframework.boot:spring-boot-starter-data-mongodb')
+    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'
+    implementation 'org.mongodb:mongodb-driver-sync'
+    implementation 'org.mongodb:mongodb-driver-core'
 
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
