--- a/.github/workflows/blue-green-deploy.yml
+++ b/.github/workflows/blue-green-deploy.yml
@@ -16,7 +16,7 @@ jobs:
 
       # 2. Docker Hub 로그인
       - name: Log in to Docker Hub
-        uses: ocker/login-action@v3.3.0
+        uses: docker/login-action@v3.3.0
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
