--- a/.github/workflows/blue-green-deploy.yml
+++ b/.github/workflows/blue-green-deploy.yml
@@ -31,14 +31,10 @@ jobs:
 
       # 4. Nginx 전환 스크립트 실행
       - name: Update Nginx Configuration
-        env:
-          HOST: ${{ secrets.EC2_HOST }}
-          USER: ${{ secrets.EC2_USER }}
-          PRIVATE_KEY: ${{ secrets.EC2_PRIVATE_KEY }}
         run: |
-          echo "$PRIVATE_KEY" > private_key.pem
+          echo ${{ secrets.EC2_PRIVATE_KEY }} > private_key.pem
           chmod 600 private_key.pem
-
-          ssh -i private_key.pem $USER@$HOST << EOF
+          
+          ssh -i private_key.pem ${{ secrets.EC2_USER }}@${{ secrets.EC2_HOST }} << EOF
             bash /home/ubuntu/switch_environment.sh
           EOF
