--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -23,10 +23,16 @@ jobs:
 
       # 3. Docker 이미지 빌드 및 푸시
       - name: Build and Push Docker Image
-        run: |
-          docker-compose -f docker-compose.yml build
-          docker tag camping-on:latest ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest
-          docker push ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest
+        uses: docker/build-push-action@v6.10.0
+        with:
+          context: .
+          file: ./Dockerfile
+          tags: |
+            ${{ secrets.DOCKER_USERNAME }}/ ${{ secrets.DOCKER_PASSWORD }}:latest
+          push: true
+          pull: true
+          platforms: linux/amd64
+        
 
       # 4. EC2에서 Pull 및 실행
       - name: Deploy to EC2
@@ -44,9 +50,15 @@ jobs:
             # 기존 컨테이너 중지 및 삭제
             docker stop camping-on || true
             docker rm camping-on || true
-          
-            # docker-compose로 재배포
-            cd ${{ secrets.EC2_TARGET_PATH }}
-            docker-compose down || true
-            docker-compose up -d
+
+            # 새로운 컨테이너 실행
+            docker run -d \
+              --name camping-on \
+              --env-file ${{ secrets.EC2_TARGET_PATH }}/.env \
+              -p 8080:8080 \
+              ${{ secrets.DOCKER_USERNAME }}/${{ secrets.DOCKER_REPO }}:latest
           EOF
+
+      # 5. Docker 이미지 정리
+      - name: Clean up Docker images
+        run: docker image prune -af
