Feat: #229 docker 사용 자동 배포
- Dockerhub 사용
- 환경변수는 서버에서 따로 관리

Closes #229

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,14 +5,14 @@ services:
       dockerfile: Dockerfile
     image: camping-on:latest
     container_name: camping-on
-    env_file:
-      - .env # 환경 변수 파일 경로
     ports:
       - "8080:8080"
     restart: always
     environment:
-      SPRING_PROFILES_ACTIVE: prod,s3Bucket
+      SPRING_PROFILES_ACTIVE: dev,s3Bucket
       TZ: Asia/Seoul
+    volumes:
+      - ./logs:app/logs # 로그 마운트
     networks:
       - app-network
 
