Feat: #258 Redis 도입으로 인한 배포 및 로컬 실행용 docker-compose 파일 변경
- 배포 시 서버의 redis와 같은 네트워크에서 실행되도록 코드 추가
- dev 환경에서 docker-compose로 실행해볼 수 있게끔 docker-compose.yml 변경

Closes #258

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -52,6 +52,7 @@ jobs:
             docker run -d \
             --env-file ${{ secrets.EC2_TARGET_PATH }}/.env \
             --name camping-on \
+            --network campingon-network \
             -p 8080:8080 \
             -v ${{ secrets.EC2_TARGET_PATH }}/logs:/app/logs \
             ${{ secrets.DOCKER_USERNAME }}/camping-on:latest
