--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,11 +8,31 @@ services:
     ports:
       - "8080:8080"
     restart: always
+    env_file:
+      - ./.env
     environment:
       SPRING_PROFILES_ACTIVE: dev,s3Bucket
       TZ: Asia/Seoul
     volumes:
-      - ./logs:app/logs # 로그 마운트
+      - ./logs:/app/logs # 로그 마운트
+    depends_on:
+      redis:
+        condition: service_healthy
+    networks:
+      - app-network
+
+  redis:
+    image: redis:latest
+    container_name: campingon-redis
+    ports:
+      - "6379:6379"
+    command: [ "redis-server" ]
+    healthcheck:
+      test: ["CMD", "redis-cli", "ping"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+      start_period: 10s
     networks:
       - app-network
 
