--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,6 +5,12 @@ spring:
         registration:
           google:
             redirect-uri: http://localhost:8080/login/oauth2/code/google
+  data:
+    redis:
+      host: localhost
+      port: 6379
+      timeout: 2000
+      password:
 
 app:
   front-url: http://localhost:3000
