refactor: 자동완성 카페인 라이브러리 적용
- 캐시형 Enum 생성
- Caffeine 라이브러리 의존성 추가
- CaffeineConfig 생성
- Spring Cache과 카페인을 사용한 자동완성 서비스 적용

--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,10 @@ dependencies {
     implementation 'org.mongodb:mongodb-driver-sync'
     implementation 'org.mongodb:mongodb-driver-core'
 
+    // Caffeine
+    implementation 'org.springframework.boot:spring-boot-starter-cache'
+    implementation 'com.github.ben-manes.caffeine:caffeine'
+
     // redis
     implementation 'org.springframework.boot:spring-boot-starter-data-redis'
 
